--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,7 @@ title: Publications
 ---
 
 <ol reversed class="ul2">
+<li>Lakhani, A., Kang, D. H., Kang, Y. E., Park, J. O.  <a href="https://doi.org/10.3803/EnM.2023.1814">Toward systems-level metabolic analysis in endocrine disorders and cancer.</a> <i>Endocrinology and Metabolism</i> (2023) doi: 10.3803/EnM.2023.1814</li>
 <li>Law, R. C., O’Keeffe, S., Nurwono, G., Ki, R., Lakhani, A., Lai, P., Park, J. O.  <a href="https://doi.org/10.1101/2023.11.06.565907">Determination of metabolic fluxes by deep learning of isotope labeling patterns.</a> <i>bioRxiv</i> (2023) doi: 10.1101/2023.11.06.565907</li>
 <li>Xie, Y., Erşan, S., Guan, X., Wang, J., Sha, J., Xu, S., Wohlschlegel, J. A., Park, J. O., Liu, C.  <a href="https://doi.org/10.1073/pnas.2308373120">Unexpected metabolic rewiring of CO<sub>2</sub> fixation in H<sub>2</sub>-mediated materials–biology hybrids.</a> <i>Proceedings of the National Academy of Sciences</i> 120(42),e2308373120 (2023) doi: 10.1073/pnas.2308373120</li>
 <li>Park, J. O., Nielsen, D. R.  <a href="https://authors.elsevier.com/a/1hs6I3PtAV5BrF">Editorial overview: Energy biotechnology as an integral solution to global challenges.</a> <i>Current Opinion in Biotechnology</i> 84,103006 (2023) doi: 10.1016/j.copbio.2023.103006</li>
