december photos update

--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,12 @@ title: Photos
 	<!-- <div class="container"> -->
 		<div class="card-columns">
 			<div class="card">
+				<span class="image fit"><a href="images/group/20231214_201254.jpg"><img src="images/group/20231214_201254.jpg" alt="" /><p class="title">Holiday Dinner in Beverly Hills </br> December 2023</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20231214_090638.jpg"><img src="images/group/20231214_090638.jpg" alt="" /><p class="title">9AM Brewin' Tasting </br> December 2023</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/20230611_221226.jpg"><img src="images/group/20230611_221226.jpg" alt="" /><p class="title">Lab @ Marina Bay Sands </br> June 2023</p></a></span>
 			</div>
 			<div class="card">
