--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@ title: Resources
 ---
 
 
-<p><a href="https://biopacificmip.org"><span class="image left"><img src="images/logos/BioPACIFIC.png" alt="" /></span><br><br><font size="+3">NSF BioPACIFIC MIP</font></a></p>
+<p><a href="https://metabolicflux.org/"><span class="image left"><img src="images/logos/MLFlux.png" alt="" /></span><br><font size="+3">Metabolic Flux Analysis via Machine Learning</font></a></p>
 <br><br><br><br>
 
 <p><a href="https://systems.crump.ucla.edu/metabolomics_center"><span class="image left"><img src="images/logos/MetabolomicsCenter.png" alt="" /></span><br><font size="+3">Metabolomics</font></a></p>
@@ -14,6 +14,9 @@ title: Resources
 <br><br><br><br>
 
 <p><a href="https://samueli.ucla.edu"><span class="image left"><img src="images/logos/Samueli.png" alt="" /></span><br><font size="+3">Engineering</font></a></p>
+<br><br><br><br>
+
+<p><a href="https://biopacificmip.org"><span class="image left"><img src="images/logos/BioPACIFIC.png" alt="" /></span><br><br><font size="+3">NSF BioPACIFIC MIP</font></a></p>
 <br><br><br><br>
 
 <p><a href="data/cobiot-database.xlsx"><span class="image left"><img src="images/logos/cobiot.jpg" alt="" /></span><br><font size="+3">Supplementary Data for "Sustainable Metabolic Engineering Requires a Perfect Trifecta"</font></a></p>
