--- a/members.html
+++ b/members.html
@@ -106,6 +106,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/gs.jpg" alt="Gourav" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/gs.jpg">Gourav Saha</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">gouravjsaha at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/lg.jpg" alt="Lilly" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/lg.jpg">Lilly Garcia</a></h4>
@@ -191,6 +201,16 @@ title: Members
 			<h4 align="center"><a href="/images/ppl/hs.jpg">Lynn Harin Sim</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">harinsim at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/ks.jpg" alt="Kabir" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/ks.jpg">Bhai Kabir Singh</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">bhaikabirsingh at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
