--- a/members.html
+++ b/members.html
@@ -206,9 +206,9 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
-			<img src="/images/ppl/ks.jpg" alt="Kabir" style="width:100%">
+			<img src="/images/ppl/ks.png" alt="Kabir" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="/images/ppl/ks.jpg">Bhai Kabir Singh</a></h4>
+			<h4 align="center"><a href="/images/ppl/ks.png">Bhai Kabir Singh</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">bhaikabirsingh at_g.ucla.edu</p>
 			</div>
