update bio and pub

--- a/biography.html
+++ b/biography.html
@@ -129,6 +129,8 @@ title: Biography
 		<p>
 		<h3>Presentations</h3>
 		<ul class="ul1">
+		<li>Department of Chemical Engineering, IIT Delhi. <i>3/1/2024</i></li>
+		<li>Mork Family Department of Chemical Engineering and Materials Science, University of Southern California. <i>2/20/2024</i></li>
 		<li>2023 AIChE Annual Meeting. <i>Orlando, FL, 11/8/2023</i></li>
 		<li>Metabolomics, Metabolic Engineering, and Carbon Upcycling. <i>U.S.- Korea Synthetic Biology Conference, Lawrence Berkeley National Laboratory, Emeryville, CA, 11/3/2023</i></li>
 		<li>Metabolomics-Guided Discovery of Metabolic Design Principles and Engineering Strategies. <i>MB 610 Advanced Topics of Bioethics, Bioinformatics, and Molecular Biology, San Diego State University, 10/25/23</i></li>
