--- a/biography.html
+++ b/biography.html
@@ -74,11 +74,11 @@ title: Biography
 		<hr />
 		<h3>Teaching</h3>
 		Department of Chemical and Biomolecular Engineering, UCLA – <i>2018 - present</i>
-		<li>Systems Biology: Intracellular Network Identification and Analysis (CBE 246)</li>
+		<li>Systems Biology: Intracellular Network Identification and Analysis (CBE C146/C246)</li>
 		<li>Molecular Biotechnology for Engineers (CBE/BE CM145/CM245)</li>
 		<li>Molecular Biotechnology: From Gene to Product (CBE 104D)</li>
 		<li>Chemical Engineering Laboratory (CBE 104B)</li>
-		<li>Thermodynamics (CBE 200 and CBE 102A)</li>
+		<li>Thermodynamics (CBE 200 & CBE 102A)</li>
 		<br>
 		Department of Chemical Engineering, MIT – <i>2017</i>
 		<li>Downstream Processing</li>
@@ -129,6 +129,9 @@ title: Biography
 		<p>
 		<h3>Presentations</h3>
 		<ul class="ul1">
+		<li>Chungnam National University College of Medicine. <i>3/27/2024</i></li>
+		<li>BioNano Research Institute, Gachon University. <i>3/25/2024</i></li>
+		<li>Department of Chemical and Biological Engineering, Seoul National University. <i>3/22/2024</i></li>
 		<li>Department of Chemical Engineering, IIT Delhi. <i>3/1/2024</i></li>
 		<li>Mork Family Department of Chemical Engineering and Materials Science, University of Southern California. <i>2/20/2024</i></li>
 		<li>2023 AIChE Annual Meeting. <i>Orlando, FL, 11/8/2023</i></li>
