--- a/members.html
+++ b/members.html
@@ -20,7 +20,7 @@ title: Members
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/se.jpg">Sevcan Erşan</a></h4>
 			<p class="title">Postdoctoral Researcher</p>
-			<p style="text-align:right;">sevcanersan at_ucla.com</p>
+			<p style="text-align:right;">sevcanersan at_ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
