update photos and bio

--- a/biography.html
+++ b/biography.html
@@ -129,6 +129,7 @@ title: Biography
 		<p>
 		<h3>Presentations</h3>
 		<ul class="ul1">
+		<li>Department of Biological Chemistry, UCI School of Medicine. <i>4/10/2024</i></li>
 		<li>Chungnam National University College of Medicine. <i>3/27/2024</i></li>
 		<li>BioNano Research Institute, Gachon University. <i>3/25/2024</i></li>
 		<li>Department of Chemical and Biological Engineering, Seoul National University. <i>3/22/2024</i></li>
