--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,15 @@ title: Photos
 	<!-- <div class="container"> -->
 		<div class="card-columns">
 			<div class="card">
+				<span class="image fit"><a href="images/group/20240403_193241.jpg"><img src="images/group/20240403_193241.jpg" alt="" /><p class="title">DOE meeting in North Bethesda </br> April 2024</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/img_0615.jpg"><img src="images/group/img_0615.jpg" alt="" /><p class="title">Samantha @ Keystone meeting in Killarney, Ireland </br> March 2024</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/img_2125.jpg"><img src="images/group/img_2125.jpg" alt="" /><p class="title">Aliya @ Keystone meeting in Killarney, Ireland </br> March 2024</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/20231214_201254.jpg"><img src="images/group/20231214_201254.jpg" alt="" /><p class="title">Holiday Dinner in Beverly Hills </br> December 2023</p></a></span>
 			</div>
 			<div class="card">
