--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,7 @@ title: Publications
 ---
 
 <ol reversed class="ul2">
+<li>Ju, S.-H., Lee, S. E., Yi, S., Choi, N. R., Kim, K. H., Kim, S. M., Koh, J-Y., Kim, S.-K., Kim S.-Y., Heo, J. Y., Park, J. O., Park, S., Koo, B. S., Kang, Y. E.  <a href="https://doi.org/10.1038/s41598-024-61839-0">Transcriptomic characteristics according to tumor size and SUVmax in papillary thyroid cancer patients.</a> <i>Scientific Reports</i> 14,11005 (2024) doi: 10.1038/s41598-024-61839-0</li>
 <li>Lee, S. E., Koo, B. S., Sun, P., Yi, S., Choi, N. R., Yoon, J., Kim, S.-Y., Kim S.-K., Park, S., Lakhani, A., O’Keeffe, S., Park, J. O., Kang, D. H., Kang, Y. E.  <a href="https://doi.org/10.1038/s41420-024-01970-z">Neutrophil diversity is associated with T-cell immunity and clinical relevance in patients with thyroid cancer.</a> <i>Cell Death Discovery</i> 10,222 (2024) doi: 10.1038/s41420-024-01970-z</li>
 <li>Lakhani, A., Chen, X., Chen, L. C., Hong, M., Khericha, M., Chen, Y., Chen, Y. Y., Park, J. O.  <a href="https://doi.org/10.1038/s42255-024-01034-7">Extracellular domains of CARs reprogramme T cell metabolism without antigen stimulation.</a> <i>Nature Metabolism</i> (2024) doi: 10.1038/s42255-024-01034-7</li>
 <li>Law, R. C., Nurwono, G., Park, J. O.  <a href="https://doi.org/10.1038/s41589-023-01395-2">A parallel glycolysis provides a selective advantage through rapid growth acceleration.</a> <i>Nature Chemical Biology</i> 20(3),314-322 (2024) doi: 10.1038/s41589-023-01395-2</li>
