new lab social photo upload

--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,9 @@ title: Photos
 	<!-- <div class="container"> -->
 		<div class="card-columns">
 			<div class="card">
+				<span class="image fit"><a href="images/group/20240604_204806.jpg"><img src="images/group/20240604_204806.jpg" alt="" /><p class="title">Lab Celebration in Bel Air </br> June 2024</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/20240403_193241.jpg"><img src="images/group/20240403_193241.jpg" alt="" /><p class="title">DOE meeting in North Bethesda </br> April 2024</p></a></span>
 			</div>
 			<div class="card">
