--- a/members.html
+++ b/members.html
@@ -16,16 +16,6 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
-			<img src="/images/ppl/se.jpg" alt="Sevcan" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="/images/ppl/se.jpg">Sevcan Erşan</a></h4>
-			<p class="title">Postdoctoral Researcher</p>
-			<p style="text-align:right;">sevcanersan at_ucla.edu</p>
-			</div>
-		</div>
-	<!-- </div> -->
-	<!-- <div class="col-xs-6 col-md-4"> -->
-		<div class="card">
 			<img src="/images/ppl/if.jpg" alt="Isabelle" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/if.jpg">Isabelle Fischer</a></h4>
@@ -94,33 +84,23 @@ title: Members
 			</div>
 		</div>
 	<!-- </div> -->
-	<!-- <div class="col-xs-6 col-md-4"> -->
+		<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
-			<img src="/images/ppl/gs.jpg" alt="Gourav" style="width:100%">
+			<img src="/images/ppl/edi.jpg" alt="Emma" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="/images/ppl/gs.jpg">Gourav Saha</a></h4>
-			<p class="title">Graduate Student</p>
-			<p style="text-align:right;">gouravjsaha at_g.ucla.edu</p>
+			<h4 align="center"><a href="/images/ppl/edi.jpg">Emma Dickinson</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">emmadickinson at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
-			<img src="/images/ppl/lg.jpg" alt="Lilly" style="width:100%">
+			<img src="/images/ppl/ehan.jpg" alt="Elizabeth" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="/images/ppl/lg.jpg">Lilly Garcia</a></h4>
+			<h4 align="center"><a href="/images/ppl/ehan.jpg">Elizabeth Han</a></h4>
 			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">lillygarcia at_g.ucla.edu</p>
-			</div>
-		</div>
-	<!-- </div> -->
-	<!-- <div class="col-xs-6 col-md-4"> -->
-		<div class="card">
-			<img src="/images/ppl/nh.jpg" alt="Nikolai" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="/images/ppl/nh.jpg">Nikolai Haines</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">nhaines2 at_g.ucla.edu</p>
+			<p style="text-align:right;">elizabethhan4 at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
@@ -131,16 +111,6 @@ title: Members
 			<h4 align="center"><a href="/images/ppl/eh.jpg">Eddie Hu</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">eddiehukong at_gmail.com</p>
-			</div>
-		</div>
-	<!-- </div> -->
-	<!-- <div class="col-xs-6 col-md-4"> -->
-		<div class="card">
-			<img src="/images/ppl/rk.png" alt="Rachel" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="/images/ppl/rk.png">Rachel Ki</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">rachelki at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
@@ -164,17 +134,7 @@ title: Members
 			</div>
 		</div>
 	<!-- </div> -->
-	<!-- <div class="col-xs-6 col-md-4"> -->
-		<div class="card">
-			<img src="/images/ppl/emc.jpg" alt="Elle" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="/images/ppl/emc.jpg">Elle McCue</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">ellemccue at_g.ucla.edu</p>
-			</div>
-		</div>
-	<!-- </div> -->
-	<!-- <div class="col-xs-6 col-md-4"> -->
+		<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/kr.jpg" alt="Kiersten" style="width:100%">
 			<div class="container">
@@ -250,6 +210,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/gs.jpg" alt="Gourav" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/gs.jpg">Gourav Saha</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">gouravjsaha at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/jx.jpg" alt="Jimmy" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/jx.jpg">Jimmy Xu</a></h4>
@@ -265,6 +235,16 @@ title: Members
 			<h4 align="center"><a href="/images/ppl/ta.jpg">Thikrayat Al-Attar</a></h4>
 			<p class="title">Postdoctoral Scholar</p>
 			<p style="text-align:right;">tinaattar at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+		<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/se.jpg" alt="Sevcan" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/se.jpg">Sevcan Erşan</a></h4>
+			<p class="title">Postdoctoral Researcher</p>
+			<p style="text-align:right;">sevcanersan at_ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
@@ -328,7 +308,17 @@ title: Members
 			</div>
 		</div>
 	<!-- </div> -->
-	<!-- <div class="col-xs-6 col-md-4"> -->
+		<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/lg.jpg" alt="Lilly" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/lg.jpg">Lilly Garcia</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">lillygarcia at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+		<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/cg.jpg" alt="Cole" style="width:100%">
 			<div class="container">
@@ -350,11 +340,31 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/nh.jpg" alt="Nikolai" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/nh.jpg">Nikolai Haines</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">nhaines2 at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/eh_.jpg" alt="Emma" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/eh_.jpg">Emma Hanson</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">emmahanson at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/rk.png" alt="Rachel" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/rk.png">Rachel Ki</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">rachelki at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
@@ -385,6 +395,16 @@ title: Members
 			<h4 align="center"><a href="/images/ppl/km.jpg">Kayli Masuda</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">kaylimasuda at_yahoo.com</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/emc.jpg" alt="Elle" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/emc.jpg">Elle McCue</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">ellemccue at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
