--- a/members.html
+++ b/members.html
@@ -16,6 +16,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/jk.jpg" alt="JuHyun" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/jk.jpg">Ju-Hyun Kim</a></h4>
+			<p class="title">Visiting Scholar</p>
+			<p style="text-align:right;">jhkim at_yu.ac.kr</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/if.jpg" alt="Isabelle" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/if.jpg">Isabelle Fischer</a></h4>
@@ -116,11 +126,31 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/hk.jpg" alt="Hanadi" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/hk.jpg">Hanadi Kamal</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">hanadik05 at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/aml.jpg" alt="Alina" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/aml.jpg">Alina Lambacher</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">aml21 at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/ll.jpg" alt="Leandro" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/ll.jpg">Leandro Luis Lavandosque</a></h4>
+			<p class="title">Visiting Student</p>
+			<p style="text-align:right;">lavandosque at_usp.br</p>
 			</div>
 		</div>
 	<!-- </div> -->
