update publications and photos

--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,18 @@ title: Photos
 	<!-- <div class="container"> -->
 		<div class="card-columns">
 			<div class="card">
+				<span class="image fit"><a href="images/fun/september_sail_2024.jpg"><img src="images/fun/september_sail_2024.jpg" alt="" /><p class="title">September Sail 2024</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/fun/august_sail2_2024.jpg"><img src="images/fun/august_sail2_2024.jpg" alt="" /><p class="title">August Sail 2024</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/fun/august_sail_2024.jpg"><img src="images/fun/august_sail_2024.jpg" alt="" /><p class="title">August Sail 2024</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20240830_110738.jpg"><img src="images/group/20240830_110738.jpg" alt="" /><p class="title">Lynn w/ mentor Samantha @ SURP 2024 </br> August 2024</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/20240604_204806.jpg"><img src="images/group/20240604_204806.jpg" alt="" /><p class="title">Lab Celebration in Bel Air </br> June 2024</p></a></span>
 			</div>
 			<div class="card">
