--- a/members.html
+++ b/members.html
@@ -239,14 +239,14 @@ title: Members
 		</div>
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
-		<div class="card">
+	<!--	<div class="card">
 			<img src="/images/ppl/gs.jpg" alt="Gourav" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/gs.jpg">Gourav Saha</a></h4>
 			<p class="title">Graduate Student</p>
 			<p style="text-align:right;">gouravjsaha at_g.ucla.edu</p>
 			</div>
-		</div>
+		</div> -->
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
