--- a/members.html
+++ b/members.html
@@ -26,6 +26,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/aa.jpg" alt="Ahmed" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/aa.jpg">Ahmed Almunaifi</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">almunaifia at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/if.jpg" alt="Isabelle" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/if.jpg">Isabelle Fischer</a></h4>
@@ -94,7 +104,17 @@ title: Members
 			</div>
 		</div>
 	<!-- </div> -->
-		<!-- <div class="col-xs-6 col-md-4"> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/tx.jpg" alt="Tongjun" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/tx.jpg">Tongjun Xiang</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">xiangtj at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/edi.jpg" alt="Emma" style="width:100%">
 			<div class="container">
