update bio and photos

--- a/biography.html
+++ b/biography.html
@@ -129,6 +129,10 @@ title: Biography
 		<p>
 		<h3>Presentations</h3>
 		<ul class="ul1">
+		<li>2024 AIChE Annual Meeting. <i>San Diego, CA, 10/29/2024</i></li>
+		<li>System Network Inflammation Control Research Center, Chungnam National University College of Medicine. <i>10/8/2024</i></li>
+		<li>Korea-U.S. Synthetic Biology Conference. <i>Daejeon, South Korea, 10/7/2024</i></li>
+		<li>2024 Research Updates in Lymphoma, Cedars-Sinai Medical Center. <i>9/28/2024</i></li>
 		<li>Department of Biological Chemistry, UCI School of Medicine. <i>4/10/2024</i></li>
 		<li>Chungnam National University College of Medicine. <i>3/27/2024</i></li>
 		<li>BioNano Research Institute, Gachon University. <i>3/25/2024</i></li>
