--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,30 @@ title: Photos
 	<!-- <div class="container"> -->
 		<div class="card-columns">
 			<div class="card">
+				<span class="image fit"><a href="images/group/20241029_194020.jpg"><img src="images/group/20241029_194020.jpg" alt="" /><p class="title">AIChE meeting in San Diego </br> October 2024</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20241027_175452.jpg"><img src="images/group/20241027_175452.jpg" alt="" /><p class="title">Aliya @ AIChE meeting in San Diego </br> October 2024</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20241030_095326.jpg"><img src="images/group/20241030_095326.jpg" alt="" /><p class="title">Richard @ AIChE meeting in San Diego </br> October 2024</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20241030_165527.jpg"><img src="images/group/20241030_165527.jpg" alt="" /><p class="title">Samantha @ AIChE meeting in San Diego </br> October 2024</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20241028_132731.jpg"><img src="images/group/20241028_132731.jpg" alt="" /><p class="title">Glenn @ AIChE meeting in San Diego </br> October 2024</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20241029_084455.jpg"><img src="images/group/20241029_084455.jpg" alt="" /><p class="title">Kartikeya @ AIChE meeting in San Diego </br> October 2024</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20241029_155107.jpg"><img src="images/group/20241029_155107.jpg" alt="" /><p class="title">Ahmed @ AIChE meeting in San Diego </br> October 2024</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20241027_155442.jpg"><img src="images/group/20241027_155442.jpg" alt="" /><p class="title">AIChE Beer Brewing Competition Winners </br> October 2024</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/fun/september_sail_2024.jpg"><img src="images/fun/september_sail_2024.jpg" alt="" /><p class="title">September Sail 2024</p></a></span>
 			</div>
 			<div class="card">
