--- a/members.html
+++ b/members.html
@@ -106,6 +106,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/apu.jpg" alt="Alexander" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/apu.jpg">Alexander Pullin</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">apullin17 at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/tx.jpg" alt="Tongjun" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/tx.jpg">Tongjun Xiang</a></h4>
@@ -211,6 +221,16 @@ title: Members
 			<h4 align="center"><a href="/images/ppl/ks.png">Bhai Kabir Singh</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">bhaikabirsingh at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/hy.jpg" alt="Hannah" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/hy.jpg">Hannah Yip</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">hannahyip at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
