update photos and bio

--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,9 @@ title: Photos
 	<!-- <div class="container"> -->
 		<div class="card-columns">
 			<div class="card">
+				<span class="image fit"><a href="images/group/20241204_130531.jpg"><img src="images/group/20241204_130531.jpg" alt="" /><p class="title">Post-lab cleanup lunch</br> December 2024</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/aliya-defense.jpg"><img src="images/group/aliya-defense.jpg" alt="" /><p class="title">Congrats, Dr. Lakhani! </br> November 2024</p></a></span>
 			</div>
 			<div class="card">
