--- a/biography.html
+++ b/biography.html
@@ -129,6 +129,7 @@ title: Biography
 		<p>
 		<h3>Presentations</h3>
 		<ul class="ul1">
+		<li>International SynBYSS Conference. <i>Honolulu, HI, 12/9/2024</i></li>
 		<li>Korea-U.S. Emerging Tech Conference. <i>Los Angeles, CA, 11/22/2024</i></li>
 		<li>2024 AIChE Annual Meeting. <i>San Diego, CA, 10/29/2024</i></li>
 		<li>System Network Inflammation Control Research Center, Chungnam National University College of Medicine. <i>10/8/2024</i></li>
