--- a/photos.html
+++ b/photos.html
@@ -7,10 +7,19 @@ title: Photos
 	<!-- <div class="container"> -->
 		<div class="card-columns">
 			<div class="card">
+				<span class="image fit"><a href="images/group/richard-defense.png"><img src="images/group/richard-defense.png" alt="" /><p class="title">Congrats, Dr. Law!</br> April 2025</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20250331_191940.jpg"><img src="images/group/20250331_191940.jpg" alt="" /><p class="title">DOE meeting in Crystal City</br> March 2025</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20250301_141637.jpg"><img src="images/group/20250301_141637.jpg" alt="" /><p class="title">Lunch break in Santa Monica</br> March 2025</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/20241204_130531.jpg"><img src="images/group/20241204_130531.jpg" alt="" /><p class="title">Post-lab cleanup lunch</br> December 2024</p></a></span>
 			</div>
 			<div class="card">
-				<span class="image fit"><a href="images/group/aliya-defense.jpg"><img src="images/group/aliya-defense.jpg" alt="" /><p class="title">Congrats, Dr. Lakhani! </br> November 2024</p></a></span>
+				<span class="image fit"><a href="images/group/aliya-defense.jpg"><img src="images/group/aliya-defense.jpg" alt="" /><p class="title">Congrats, Dr. Lakhani!</br> November 2024</p></a></span>
 			</div>
 			<div class="card">
 				<span class="image fit"><a href="images/group/20241029_194020.jpg"><img src="images/group/20241029_194020.jpg" alt="" /><p class="title">AIChE meeting in San Diego </br> October 2024</p></a></span>
