--- a/publications.html
+++ b/publications.html
@@ -4,7 +4,7 @@ title: Publications
 ---
 
 <ol reversed class="ul2">
-<li>O'Keeffe, S., Garcia, L., Chen, Y., Law, R. C., Liu, C., Park, J. O.  <a href="https://doi.org/10.1016/j.tibtech.2024.08.014">Bringing carbon to life via one-carbon metabolism.</a> <i>Trends in Biotechnology</i> (2024) doi: doi.org/10.1016/j.tibtech.2024.08.014</li>
+<li>O'Keeffe, S., Garcia, L., Chen, Y., Law, R. C., Liu, C., Park, J. O.  <a href="https://doi.org/10.1016/j.tibtech.2024.08.014">Bringing carbon to life via one-carbon metabolism.</a> <i>Trends in Biotechnology</i> 43(3),572-585 (2025) doi: doi.org/10.1016/j.tibtech.2024.08.014</li>
 <li>Gao, Y., Xiao, M., Zou, H., Nurwono, G., Zgonc, D., Birch, Q., Nadagouda, M. N., Park, J. O., Blotevogel, J., Liu, C., Hoek, E. M. V., Mahendra, S.  <a href="https://doi.org/10.1021/acs.est.4c02849">Laccase immobilized on arginine-functionalized boron nitride nanosheets for enhanced atrazine degradation.</a> <i>Environmental Science & Technology</i> 58(34),15111-15119 (2024) doi: 10.1021/acs.est.4c02849</li>
 <li>Guan, X., Erşan, S., Xie, Y., Park, J. O., Liu, C.  <a href="https://doi.org/10.1021/acsnano.4c05763">Redox and energy homeostasis enabled by photocatalytic material–microbial interfaces.</a> <i>ACS Nano</i> 18(31),20567-20575 (2024) doi: 10.1021/acsnano.4c05763</li>
 <li>Schuman, Z., Xie, Y., O’Keeffe, S., Guan, X., Sha, J., Sun, J., Wohlschlegel, J. A., Park, J. O., Liu, C.  <a href="https://doi.org/10.1021/acsami.4c07363">Integrated proteomics and metabolomics reveal altered metabolic regulation of <i>Xanthobacter autotrophicus</i> under electrochemical water-splitting conditions.</a> <i>ACS Applied Materials & Interfaces</i> 16(31),40973-40979 (2024) doi: 10.1021/acsami.4c07363</li>
