--- a/members.html
+++ b/members.html
@@ -16,6 +16,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/dk.png" alt="DaHyun" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/dk.png">Da Hyun Kang</a></h4>
+			<p class="title">Visiting Scholar</p>
+			<p style="text-align:right;">ibelieveu113 at_gmail.com</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/jk.jpg" alt="JuHyun" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/jk.jpg">Ju-Hyun Kim</a></h4>
@@ -41,6 +51,16 @@ title: Members
 			<h4 align="center"><a href="/images/ppl/if.jpg">Isabelle Fischer</a></h4>
 			<p class="title">Graduate Student</p>
 			<p style="text-align:right;">ifisc01 at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/yj.jpg" alt="YoungHeun" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/yj.jpg">Young-Heun Jung</a></h4>
+			<p class="title">Visiting Graduate Student</p>
+			<p style="text-align:right;">jyoungheun at_yu.ac.kr</p>
 			</div>
 		</div>
 	<!-- </div> -->
@@ -126,6 +146,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/ee.jpg" alt="Ecesu" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/ee.jpg">Ecesu Erdim</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">ecesuerdim at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/ehan.jpg" alt="Elizabeth" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/ehan.jpg">Elizabeth Han</a></h4>
@@ -201,6 +231,16 @@ title: Members
 			<h4 align="center"><a href="/images/ppl/ks.png">Bhai Kabir Singh</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">bhaikabirsingh at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/ny.jpg" alt="Nini" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/ny.jpg">Nini Yang</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">nini0831 at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
