--- a/publications.html
+++ b/publications.html
@@ -4,7 +4,8 @@ title: Publications
 ---
 
 <ol reversed class="ul2">
-<li>Jung, Y.-H., Lee, D.-C., Choi, B.-H., Park, J. O., Kim, J.-H.  <a href="https://doi.org/10.1080/00498254.2025.2497047">Feature-based molecular networking updates the in vitro metabolic characterisation of fenbendazole across species.</a> <i>Trends in Biotechnology</i> (2025) doi: 10.1080/00498254.2025.2497047</li>
+<li>Erşan, S., Chen, Y., Park, J. O.  <a href="https://doi.org/10.1007/s11306-025-02269-5">Comprehensive profiling of folates across polyglutamylation and one-carbon states.</a> <i>Metabolomics</i> 21,71 (2025) doi: 10.1007/s11306-025-02269-5</li>
+<li>Jung, Y.-H., Lee, D.-C., Choi, B.-H., Park, J. O., Kim, J.-H.  <a href="https://doi.org/10.1080/00498254.2025.2497047">Feature-based molecular networking updates the in vitro metabolic characterisation of fenbendazole across species.</a> <i>Xenobiotica</i> (2025) doi: 10.1080/00498254.2025.2497047</li>
 <li>O'Keeffe, S., Garcia, L., Chen, Y., Law, R. C., Liu, C., Park, J. O.  <a href="https://doi.org/10.1016/j.tibtech.2024.08.014">Bringing carbon to life via one-carbon metabolism.</a> <i>Trends in Biotechnology</i> 43(3),572-585 (2025) doi: 10.1016/j.tibtech.2024.08.014</li>
 <li>Gao, Y., Xiao, M., Zou, H., Nurwono, G., Zgonc, D., Birch, Q., Nadagouda, M. N., Park, J. O., Blotevogel, J., Liu, C., Hoek, E. M. V., Mahendra, S.  <a href="https://doi.org/10.1021/acs.est.4c02849">Laccase immobilized on arginine-functionalized boron nitride nanosheets for enhanced atrazine degradation.</a> <i>Environmental Science & Technology</i> 58(34),15111-15119 (2024) doi: 10.1021/acs.est.4c02849</li>
 <li>Guan, X., Erşan, S., Xie, Y., Park, J. O., Liu, C.  <a href="https://doi.org/10.1021/acsnano.4c05763">Redox and energy homeostasis enabled by photocatalytic material–microbial interfaces.</a> <i>ACS Nano</i> 18(31),20567-20575 (2024) doi: 10.1021/acsnano.4c05763</li>
