--- a/publications.html
+++ b/publications.html
@@ -4,7 +4,7 @@ title: Publications
 ---
 
 <ol reversed class="ul2">
-<li>O'Keeffe, S., Sim, H., McCue, E., Park, J. O.  <a href="https://doi.org/10.1101/2025.06.09.658709">Ensemble quantitation of absolute metabolite concentrations in T cells reveals conserved features of immunometabolism.</a> <i>bioRxiv</i> (2025) doi: 10.1101/2025.06.09.658709</li>
+<li>O'Keeffe, S., Sim, H., McCue, E., Park, J. O.  <a href="https://www.biorxiv.org/content/10.1101/2025.06.09.658709v1">Ensemble quantitation of absolute metabolite concentrations in T cells reveals conserved features of immunometabolism.</a> <i>bioRxiv</i> (2025) doi: 10.1101/2025.06.09.658709</li>
 <li>Law, R. C., Pande, K., O’Keeffe, S., Nurwono, G., Ki, R., Lai, P.-K., Park, J. O.  <a href="https://doi.org/10.1101/2023.11.06.565907">Accurate and rapid determination of metabolic flux by deep learning of isotope patterns.</a> <i>bioRxiv</i> (2025) doi: 10.1101/2023.11.06.565907</li>
 <li>Erşan, S., Chen, Y., Park, J. O.  <a href="https://doi.org/10.1007/s11306-025-02269-5">Comprehensive profiling of folates across polyglutamylation and one-carbon states.</a> <i>Metabolomics</i> 21,71 (2025) doi: 10.1007/s11306-025-02269-5</li>
 <li>Jung, Y.-H., Lee, D.-C., Choi, B.-H., Park, J. O., Kim, J.-H.  <a href="https://doi.org/10.1080/00498254.2025.2497047">Feature-based molecular networking updates the in vitro metabolic characterisation of fenbendazole across species.</a> <i>Xenobiotica</i> (2025) doi: 10.1080/00498254.2025.2497047</li>
