--- a/biography.html
+++ b/biography.html
@@ -96,9 +96,9 @@ title: Biography
 		
 		<hr />
 		<p>
-		<h3>Contribution to Diversity</h3>
+		<h3>Integration of Research and Education</h3>
 		<ul class="ul1">
-		<li>Mentor, Summer Undergraduate Research Program (SURP), Samueli Research Scholars (SRS) Program, and Integrated and Interdisciplinary Undergraduate Research Program (i<sup>2</sup>URP) – <i>2020 - present</i></li>
+		<li>Mentor, Summer Undergraduate Research Program (SURP), Samueli Research Scholars (SRS) Program, Amazon Summer Undergraduate Research Experience (SURE), and Integrated and Interdisciplinary Undergraduate Research Program (i<sup>2</sup>URP) – <i>2020 - present</i></li>
 		<li>Faculty advisor, AIChE UCLA chapter – <i>2020 - present</i></li>
 		<li>Mentor, Integrated and Interdisciplinary Undergraduate Research Program (i<sup>2</sup>URP) – <i>2020 - 2022</i></li>
 		<li>Mentor, Bruins-In-Genomics (B.I.G.) Summer Undergraduate Research Program (NSF and NIH) – <i>2020 - 2021</i></li>
@@ -129,6 +129,7 @@ title: Biography
 		<p>
 		<h3>Presentations</h3>
 		<ul class="ul1">
+		<li>Institute for Quantitative and Computational Biosciences, UCLA. <i>6/11/2025</i></li>
 		<li>Gene and Linda Voiland School of Chemical Engineering and Bioengineering, Washington State University. <i>4/7/2025</i></li>
 		<li>International SynBYSS Conference. <i>Honolulu, HI, 12/9/2024</i></li>
 		<li>Korea-U.S. Emerging Tech Conference. <i>Los Angeles, CA, 11/22/2024</i></li>
