update bio, photos, members

--- a/biography.html
+++ b/biography.html
@@ -20,7 +20,7 @@ title: Biography
 		<p>
 		<h3>Employment</h3>
 		<a href="http://www.ucla.edu/">University of California, Los Angeles (UCLA)</a>, Los Angeles, CA – <i>2018 - present</i><br>
-		<li>Assistant Professor, Department of Chemical and Biomolecular Engineering</li>
+		<li>Associate Professor, Department of Chemical and Biomolecular Engineering</li>
 		<li>Co-Director, Metabolomics Center</li>
 		<li>Affiliate Faculty, Department of Bioengineering</li>
 		<li>Associated Faculty, Institute for Quantitative and Computational Biosciences (QCBio)</li>
