--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,21 @@ title: Photos
 	<!-- <div class="container"> -->
 		<div class="card-columns">
 			<div class="card">
+				<span class="image fit"><a href="images/group/20250627_194253.jpg"><img src="images/group/20250627_194253.jpg" alt="" /><p class="title">Lab Celebration at UCLA</br> June 2025</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/samantha-me16.jpg"><img src="images/group/samantha-me16.jpg" alt="" /><p class="title">Samantha @ ME16 Copenhagen</br> June 2025</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/richard-me16.jpg"><img src="images/group/richard-me16.jpg" alt="" /><p class="title">Richard @ ME16 Copenhagen</br> June 2025</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/glenn-me16.jpg"><img src="images/group/glenn-me16.jpg" alt="" /><p class="title">Glenn @ ME16 Copenhagen</br> June 2025</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/ThumbsUp.jpg"><img src="images/group/ThumbsUp.jpg" alt="" /><p class="title">Korea-U.S. Emerging Tech Conference</br> June 2025</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/richard-defense.png"><img src="images/group/richard-defense.png" alt="" /><p class="title">Congrats, Dr. Law!</br> April 2025</p></a></span>
 			</div>
 			<div class="card">
