--- a/publications.html
+++ b/publications.html
@@ -53,6 +53,17 @@ title: Publications
 <li>Schellenberger, J., Park, J. O., Conrad, T. M., Palsson, B. Ø.  <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-11-213">BiGG: A Biochemical Genetic and Genomic knowledgebase of large scale metabolic reconstructions.</a> <i>BMC Bioinformatics</i> 11,213 (2010) doi: 10.1186/1471-2105-11-213</li>
 </ol>
 
+<!-- 
+<hr />
+
+<section>
+<h3>Book Chapter</h3>
+<ol reversed class="ul2">
+<li>Almunaifi, A., Law, R. C., O’Keeffe, S., Pande, K., Xiang, T., Ukwueze, O., Odai-Okley, A., Lai, P.-L., Park, J. O.  <a href="">Next-generation metabolic flux analysis using machine learning.</a> <i>Advanced Biotechnology Series on Machine Learning and Big Data‐enabled Biotechnology, Wiley.</i> (2025) doi: </li>
+</section>
+</ol>
+-->
+
 <hr />
 
 <section>
