--- a/members.html
+++ b/members.html
@@ -236,6 +236,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/tt.jpg" alt="Thao" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/tt.jpg">Thao Tran</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">thao.t.tran-1 at_ou.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/ny.jpg" alt="Nini" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/ny.jpg">Nini Yang</a></h4>
