--- a/photos.html
+++ b/photos.html
@@ -37,6 +37,9 @@ title: Photos
 				<span class="image fit"><a href="images/group/aliya-defense.jpg"><img src="images/group/aliya-defense.jpg" alt="" /><p class="title">Congrats, Dr. Lakhani!</br> November 2024</p></a></span>
 			</div>
 			<div class="card">
+				<span class="image fit"><a href="images/group/IMG_2285.jpg"><img src="images/group/IMG_2285.jpg" alt="" /><p class="title">Korea-U.S. Emerging Tech Conference</br> November 2024</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/20241029_194020.jpg"><img src="images/group/20241029_194020.jpg" alt="" /><p class="title">AIChE meeting in San Diego </br> October 2024</p></a></span>
 			</div>
 			<div class="card">
