--- a/members.html
+++ b/members.html
@@ -176,6 +176,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/hk2.jpg" alt="Hamid" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/hk2.jpg">Hamid Kabia</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">hamidcollegeacc at_gmail.com</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/hk.jpg" alt="Hanadi" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/hk.jpg">Hanadi Kamal</a></h4>
