update members, photos, publications

--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,15 @@ title: Photos
 	<!-- <div class="container"> -->
 		<div class="card-columns">
 			<div class="card">
+				<span class="image fit"><a href="images/group/20250829_113352.jpg"><img src="images/group/20250829_113352.jpg" alt="" /><p class="title">Emma w/ mentors Dexter and Samantha @ SURP 2025 </br> August 2025</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/fun/august_sail_2025.jpg"><img src="images/fun/august_sail_2025.jpg" alt="" /><p class="title">August Sail 2025</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/amazon_sure.png"><img src="images/group/amazon_sure.png" alt="" /><p class="title">Amazon Summer Undergraduate Research</br> July 2025</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/20250627_194253.jpg"><img src="images/group/20250627_194253.jpg" alt="" /><p class="title">Lab Celebration at UCLA</br> June 2025</p></a></span>
 			</div>
 			<div class="card">
