--- a/biography.html
+++ b/biography.html
@@ -129,6 +129,7 @@ title: Biography
 		<p>
 		<h3>Presentations</h3>
 		<ul class="ul1">
+		<li>SIMB 75th Annual Meeting and Exhibition, Society for Industrial Microbiology and Biotechnology. <i>San Francisco, CA, 7/29/2025</i></li>
 		<li>Institute for Quantitative and Computational Biosciences, UCLA. <i>6/11/2025</i></li>
 		<li>Gene and Linda Voiland School of Chemical Engineering and Bioengineering, Washington State University. <i>4/7/2025</i></li>
 		<li>International SynBYSS Conference. <i>Honolulu, HI, 12/9/2024</i></li>
