remove unnecessary breaks

--- a/biography.html
+++ b/biography.html
@@ -13,7 +13,6 @@ title: Biography
 		<li>Doctor of Philosophy in <i>Chemical and Biological Engineering</i> – <i>2016</i></li>
 		<li>Master of Arts in <i>Chemical and Biological Engineering</i> – <i>2012</i></li>
 		</ul>
-		<br>
 		<a href="https://www.ucsd.edu">University of California, San Diego (UCSD)</a>, La Jolla, CA – <i>2007 - 2010</i>
 		<ul>
 		<li>Bachelor of Science in <i>Bioengineering: Biotechnology</i></li>
@@ -23,7 +22,7 @@ title: Biography
 		
 		<p>
 		<h3>Employment</h3>
-		<a href="http://www.ucla.edu/">University of California, Los Angeles (UCLA)</a>, Los Angeles, CA – <i>2018 - present</i><br>
+		<a href="http://www.ucla.edu/">University of California, Los Angeles (UCLA)</a>, Los Angeles, CA – <i>2018 - present</i>
 		<ul>
 		<li>Associate Professor, Department of Chemical and Biomolecular Engineering</li>
 		<li>Co-Director, Metabolomics Center</li>
@@ -35,8 +34,7 @@ title: Biography
 		<li>Member, Jonsson Comprehensive Cancer Center (JCCC)</li>
 		<li>Member, Goodman-Luskin Microbiome Center (GLMC)</li>
 		</ul>
-		<br>
-		<a href="http://web.mit.edu">Massachusetts Institute of Technology</a>, Cambridge, MA – <i>2016 - 2018</i><br>
+		<a href="http://web.mit.edu">Massachusetts Institute of Technology</a>, Cambridge, MA – <i>2016 - 2018</i>
 		<ul>
 		<li>Postdoc, Department of Chemical Engineering</li>
 		</ul>
@@ -89,24 +87,20 @@ title: Biography
 		<li>Chemical Engineering Laboratory (CBE 104B)</li>
 		<li>Thermodynamics (CBE 200 & CBE 102A)</li>
 		</ul>
-		<br>
 		Department of Chemical Engineering, MIT – <i>2017</i>
 		<ul>
 		<li>Downstream Processing</li>
 		</ul>
-		<br>
 		Department of Chemical and Biological Engineering, Princeton University – <i>2012 - 2015</i>
 		<ul>
 		<li>Separations in Chemical Engineering and Biotechnology</li>
 		<li>Chemical Engineering Laboratory</li>
 		<li>Ethics and Technology: Engineering in the Real World</li>
 		</ul>
-		<br>
 		Seoul Language Institute, South Korea – <i>2010</i>
 		<ul>
 		<li>Chemistry, English, and Mathematics Instructor</li>
 		</ul>
-		<br>
 		Department of Physics, UCSD – <i>2008</i>
 		<ul>
 		<li>Reader</li>
