--- a/members.html
+++ b/members.html
@@ -36,11 +36,31 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/kc.jpg" alt="Keith" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/kc.jpg">Keith Chiu</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">keithchiu at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/if.jpg" alt="Isabelle" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/if.jpg">Isabelle Fischer</a></h4>
 			<p class="title">Graduate Student</p>
 			<p style="text-align:right;">ifisc01 at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/df.jpg" alt="David" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/df.jpg">David FitzGerald</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">dmfitzgerald at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
@@ -136,6 +156,26 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/dn.jpg" alt="Darlene" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/dn.jpg">Darlene Nguyen</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">darlenenguyen at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/ks.png" alt="Kabir" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/ks.png">Bhai Kabir Singh</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">bhaikabirsingh at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/ny.jpg" alt="Nini" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/ny.jpg">Nini Yang</a></h4>
@@ -151,6 +191,16 @@ title: Members
 			<h4 align="center"><a href="/images/ppl/hy.jpg">Hannah Yip</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">hannahyip at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/az.jpg" alt="Arianna" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/az.jpg">Arianna Zhou</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">ariannaz at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
@@ -565,16 +615,6 @@ title: Members
 			<h4 align="center"><a href="/images/ppl/hs.jpg">Lynn Harin Sim</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">harinsim at_g.ucla.edu</p>
-			</div>
-		</div>
-	<!-- </div> -->
-	<!-- <div class="col-xs-6 col-md-4"> -->
-		<div class="card">
-			<img src="/images/ppl/ks.png" alt="Kabir" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="/images/ppl/ks.png">Bhai Kabir Singh</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">bhaikabirsingh at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
